backend: add user roles